progs/tests/constant/declaration_order_wrong.sy
a :: b + 1
b :: 1

start :: fn {
    a <=> b + 1
}

// error: @1
